--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -42,8 +42,23 @@
   font-size: 16px;
 }
 #menu-m.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2c2c2c;
+  background: #27aae0;
+}
+#menu-m .mbr-navbar__section {
+  background: #27aae0;
 }
 #menu-m .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-x .mbr-brand__name {
+  font-size: 16px;
+}
+#menu-x.mbr-navbar--stuck .mbr-navbar__section {
+  background: #27aae0;
+}
+#menu-x .mbr-navbar__section {
+  background: #27aae0;
+}
+#menu-x .mbr-navbar__hamburger {
   color: #ffffff;
 }
